--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,3 @@
 <div class="footer">
-  <p>Quest'opera è distribuita con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA 4.0</a> [<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/deed.it" target="_blank">IT</a>].</p>
+  <p>OpenSource on <a href="https://github.com/MrRiky54/Blog_Template" target="_blank">GitHub</a> | Made By <a href="https://github.com/MrRiky54" target="_blank">MrRiky54</a> | <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA 4.0</a> [<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/deed.it" target="_blank">IT</a>].</p>
 </div>
