--- a/menu.html
+++ b/menu.html
@@ -1,3 +1,4 @@
-<div class="menu">
-    <a href="#"><h1>Blog</h1></a>
-</div>
+<div class="container">
+  <div class="menu">
+      <a href="#"><h1>Blog</h1></a>
+  </div>
